DuPont DevSB/src/objects/ob1__Output_Template_Body__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ob1__Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ob1__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ob1__Output_Template__c</fullName>
        <label>Output Template</label>
        <referenceTo>ob1__Output_Template__c</referenceTo>
        <relationshipLabel>Output Template Bodies</relationshipLabel>
        <relationshipName>Output_Template_Bodies</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ob1__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Output Template Body</label>
    <nameField>
        <displayFormat>OTB-{0}</displayFormat>
        <label>Output Template Body Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Output Template Bodies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>